--- a/books/templates/search_form.html
+++ b/books/templates/search_form.html
@@ -3,7 +3,7 @@
 {% block title %} for search {% endblock %}
 
 {% block content %} 
-
+   <h2> <strong> hi ! {{ username }} </strong> </h2>
 {% if errors %}
 
     <ul>
